@@ -35,12 +35,12 @@ import se.inera.intyg.intygproxyservice.integration.api.authorization.model.Cred
 import se.inera.intyg.intygproxyservice.integration.api.authorization.model.HCPSpecialityCodes;
 import se.inera.intyg.intygproxyservice.integration.api.authorization.model.HsaSystemRole;
 import se.inera.intyg.intygproxyservice.integration.api.authorization.model.NursePrescriptionRight;
-import se.riv.infrastructure.directory.authorizationmanagement.v2.CommissionType;
-import se.riv.infrastructure.directory.authorizationmanagement.v2.CredentialInformationType;
-import se.riv.infrastructure.directory.authorizationmanagement.v2.HCPSpecialityCodesType;
-import se.riv.infrastructure.directory.authorizationmanagement.v2.HsaSystemRoleType;
-import se.riv.infrastructure.directory.authorizationmanagement.v2.IIType;
-import se.riv.infrastructure.directory.authorizationmanagement.v2.NursePrescriptionRightType;
+import se.inera.intyg.intygproxyservice.se.riv.infrastructure.directory.authorizationmanagement.v2.CommissionType;
+import se.inera.intyg.intygproxyservice.se.riv.infrastructure.directory.authorizationmanagement.v2.CredentialInformationType;
+import se.inera.intyg.intygproxyservice.se.riv.infrastructure.directory.authorizationmanagement.v2.HCPSpecialityCodesType;
+import se.inera.intyg.intygproxyservice.se.riv.infrastructure.directory.authorizationmanagement.v2.HsaSystemRoleType;
+import se.inera.intyg.intygproxyservice.se.riv.infrastructure.directory.authorizationmanagement.v2.IIType;
+import se.inera.intyg.intygproxyservice.se.riv.infrastructure.directory.authorizationmanagement.v2.NursePrescriptionRightType;
 
 @ExtendWith(MockitoExtension.class)
 class CredentialInformationTypeConverterTest {
@@ -213,7 +213,7 @@ class CredentialInformationTypeConverterTest {
 
     final var response = credentialInformationTypeConverter.convert(type);
 
-    assertEquals(expectedCommission, response.getCommission().get(0));
+    assertEquals(expectedCommission, response.getCommission().getFirst());
   }
 
   @Test
@@ -226,7 +226,7 @@ class CredentialInformationTypeConverterTest {
 
     final var response = credentialInformationTypeConverter.convert(type);
 
-    assertEquals(expected, response.getNursePrescriptionRight().get(0));
+    assertEquals(expected, response.getNursePrescriptionRight().getFirst());
   }
 
   @Test
@@ -240,7 +240,7 @@ class CredentialInformationTypeConverterTest {
 
     final var response = credentialInformationTypeConverter.convert(type);
 
-    assertEquals(expected, response.getHealthCareProfessionalLicenceSpeciality().get(0));
+    assertEquals(expected, response.getHealthCareProfessionalLicenceSpeciality().getFirst());
   }
 
   @Test
@@ -252,7 +252,7 @@ class CredentialInformationTypeConverterTest {
 
     final var response = credentialInformationTypeConverter.convert(type);
 
-    assertEquals(expected, response.getHsaSystemRole().get(0));
+    assertEquals(expected, response.getHsaSystemRole().getFirst());
   }
 
   private CredentialInformationType getType() {
